ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ApplicantCount__c.field-meta.xml
<CustomField>
    <fullName>ApplicantCount__c</fullName>
    <label>Applicant Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>