ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ApplicantDetailsCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>ApplicantDetailsCompletedAt__c</fullName>
    <label>Applicant Details Completed At</label>
    <type>DateTime</type>
</CustomField>