ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ApplicantDetailsVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>ApplicantDetailsVisitedAt__c</fullName>
    <label>Applicant Details Visited At</label>
    <type>DateTime</type>
</CustomField>