ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/AssetsCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>AssetsCompletedAt__c</fullName>
    <label>Assets Completed At</label>
    <type>DateTime</type>
</CustomField>