ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/AssetsVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>AssetsVisitedAt__c</fullName>
    <label>Assets Visited At</label>
    <type>DateTime</type>
</CustomField>