ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ContactConsent__c.field-meta.xml
<CustomField>
    <fullName>ContactConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Consent</label>
    <type>Checkbox</type>
</CustomField>