ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ContactConsentLastAt__c.field-meta.xml
<CustomField>
    <fullName>ContactConsentLastAt__c</fullName>
    <label>Contact Consent Last At</label>
    <type>DateTime</type>
</CustomField>