ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/CurrentSection__c.field-meta.xml
<CustomField>
    <fullName>CurrentSection__c</fullName>
    <formula>if(!ISBLANK(RecommendationVisitedAt__c), &apos;Recommendation&apos;,
if(!ISBLANK(ReviewAndSubmitVisitedAt__c), &apos;Review &amp; Submit&apos;,
if(!ISBLANK(DocumentUploadVisitedAt__c), &apos;Document Upload&apos;,
if(!ISBLANK(IdentityVerificationVisitedAt__c), &apos;VOI&apos;,
if(AND(!ISBLANK(LoanDetailsVisitedAt__c),   ISPICKVAL(LoanPurpose__c,&apos;793&apos;) ), &apos;Loan Details&apos;,
if(!ISBLANK(ExpensesVisitedAt__c), &apos;Expenses&apos;,
if(!ISBLANK(IncomeVisitedAt__c), &apos;Incomes&apos;,
if(!ISBLANK(LiabilitiesVisitedAt__c), &apos;Liabilites&apos;,
if(!ISBLANK(AssetsVisitedAt__c), &apos;Assets&apos;,
if(!ISBLANK(PropertiesVisitedAt__c), &apos;Properties&apos;,
if(!ISBLANK(ApplicantDetailsVisitedAt__c), &apos;Applicant Details&apos;,
if(AND(!ISBLANK(LoanDetailsVisitedAt__c),   ISPICKVAL(LoanPurpose__c,&apos;792&apos;) ), &apos;Loan Details&apos;,
if(!ISBLANK(YourGoalsVisitedAt__c), &apos;Your Goals&apos;, &apos;&apos;)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Section</label>
    <type>Text</type>
</CustomField>