ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/DocumentUploadCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>DocumentUploadCompletedAt__c</fullName>
    <label>Document Upload Completed At</label>
    <type>DateTime</type>
</CustomField>