ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/DocumentUploadVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>DocumentUploadVisitedAt__c</fullName>
    <label>Document Upload Visited At</label>
    <type>DateTime</type>
</CustomField>