ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/EmploymentDetailsCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>EmploymentDetailsCompletedAt__c</fullName>
    <label>Employment Details Completed At</label>
    <type>DateTime</type>
</CustomField>