ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/EmploymentDetailsVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>EmploymentDetailsVisitedAt__c</fullName>
    <label>Employment Details Visited At</label>
    <type>DateTime</type>
</CustomField>