ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ExpensesCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>ExpensesCompletedAt__c</fullName>
    <label>Expenses Completed At</label>
    <type>DateTime</type>
</CustomField>