ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ExpensesVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>ExpensesVisitedAt__c</fullName>
    <label>Expenses Visited At</label>
    <type>DateTime</type>
</CustomField>