ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/IdentityVerificationCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>IdentityVerificationCompletedAt__c</fullName>
    <label>Identity Verification Completed At</label>
    <type>DateTime</type>
</CustomField>