ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/IdentityVerificationVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>IdentityVerificationVisitedAt__c</fullName>
    <label>Identity Verification Visited At</label>
    <type>DateTime</type>
</CustomField>