ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/IncomeCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>IncomeCompletedAt__c</fullName>
    <label>Income Completed At</label>
    <type>DateTime</type>
</CustomField>