ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/IncomeVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>IncomeVisitedAt__c</fullName>
    <label>Income Visited At</label>
    <type>DateTime</type>
</CustomField>