ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/IsFirstHomeBuyer__c.field-meta.xml
<CustomField>
    <fullName>IsFirstHomeBuyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Home Buyer</label>
    <type>Checkbox</type>
</CustomField>