ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/JourneyURL__c.field-meta.xml
<CustomField>
    <fullName>JourneyURL__c</fullName>
    <label>Journey URL</label>
    <type>Url</type>
</CustomField>