ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LiabilitiesCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>LiabilitiesCompletedAt__c</fullName>
    <label>Liabilities Completed At</label>
    <type>DateTime</type>
</CustomField>