ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LiabilitiesVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>LiabilitiesVisitedAt__c</fullName>
    <label>Liabilities Visited At</label>
    <type>DateTime</type>
</CustomField>