ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LoanDetailsCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>LoanDetailsCompletedAt__c</fullName>
    <label>Loan Details Completed At</label>
    <type>DateTime</type>
</CustomField>