ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LoanDetailsVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>LoanDetailsVisitedAt__c</fullName>
    <label>Loan Details Visited At</label>
    <type>DateTime</type>
</CustomField>