ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LoanPurchaseReason__c.field-meta.xml
<CustomField>
    <fullName>LoanPurchaseReason__c</fullName>
    <label>Loan Purchase Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanPurchaseReasons</valueSetName>
    </valueSet>
</CustomField>