ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/LoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>LoanPurpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanPurposes</valueSetName>
    </valueSet>
</CustomField>