ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/PropertiesCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>PropertiesCompletedAt__c</fullName>
    <label>Properties Completed At</label>
    <type>DateTime</type>
</CustomField>