ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/PropertiesVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>PropertiesVisitedAt__c</fullName>
    <label>Properties Visited At</label>
    <type>DateTime</type>
</CustomField>