ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/RecommendationCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>RecommendationCompletedAt__c</fullName>
    <label>Recommendation Completed At</label>
    <type>DateTime</type>
</CustomField>