ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/RecommendationVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>RecommendationVisitedAt__c</fullName>
    <label>Recommendation Visited At</label>
    <type>DateTime</type>
</CustomField>