ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <description>Reference Number for Home Loan Application</description>
    <label>Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>