ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ReviewAndSubmitCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>ReviewAndSubmitCompletedAt__c</fullName>
    <label>Review And Submit Completed At</label>
    <type>DateTime</type>
</CustomField>