ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/ReviewAndSubmitVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>ReviewAndSubmitVisitedAt__c</fullName>
    <label>Review And Submit Visited At</label>
    <type>DateTime</type>
</CustomField>