ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/Trailing_Commission__c.field-meta.xml
<CustomField>
    <fullName>Trailing_Commission__c</fullName>
    <label>Trailing Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>