ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/WhatStage__c.field-meta.xml
<CustomField>
    <fullName>WhatStage__c</fullName>
    <label>What Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>