ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/YourGoalsCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>YourGoalsCompletedAt__c</fullName>
    <label>Your Goals Completed At</label>
    <type>DateTime</type>
</CustomField>