ctm-sf-homeloan-app/main/default/objects/Opportunity/fields/YourGoalsVisitedAt__c.field-meta.xml
<CustomField>
    <fullName>YourGoalsVisitedAt__c</fullName>
    <label>Your Goals Visited At</label>
    <type>DateTime</type>
</CustomField>